Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002-2011 Simon Josefsson
See the end for copying conditions.

* Version 1.23 (unreleased) [?]

** doc: Update link to experimental TLD tables.
The new link is <https://github.com/gnuthor/tldchk>.

** Update translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.22 (released 2011-05-04) [stable]

** libidn: Add -liconv as static library requirement in libidn.pc, for MinGW.
Reported by Volker Grabsch <vog@notjusthosting.com>.

** libidn: Fix memory leak in idna_to_ascii_4z when idna_to_ascii_4i fails.
Reported by and tiny patch from Olga Limburg <olimburg@gmail.com>.

** libidn: Ran clang-analyze on the code.
Fixed some dead assignments/initializations.

** build: Really distribute win32/libidn4win.mk.

** API and ABI is backwards compatible with the previous version.

* Version 1.21 (released 2011-04-24) [stable]

** build/gettext: Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
hopefully now fixed.  Reported by Dagobert Michelsen <dam@opencsw.org>
in <http://thread.gmane.org/gmane.comp.lib.gnulib.bugs/25522>.

** build: Improve MinGW cross-compile makefile, see win32/libidn4win.mk.

** build: Visual Studio files fixed to define LIBIDN_BUILDING.
Tiny patch from Waqas Hussain <waqas20@gmail.com>.

** API and ABI is backwards compatible with the previous version.

* Version 1.20 (released 2011-03-01) [stable]

** libidn: Fix bug in ToUnicode to compare 'xn--' case-insensitively.
The problem is typically noticed when an upper ACE case string is
converted to Unicode.  Before, this would return the input rather than
converting the ACE form to Unicode.  Reported by Stepan Golosunov
<stepan@golosunov.pp.ru> in <http://bugs.debian.org/610617>.

** tests: Added self-test tst_idna3 to catch any regression of problem above.
