@@ -97,6 +97,7 @@ Waqas Hussain <waqas20@gmail.com>
 Guido Trentalancia <guido@trentalancia.com>
 Volker Grabsch <vog@notjusthosting.com>
 Olga Limburg <olimburg@gmail.com>
+Bittner Ede <bittner.ede@euronetrt.hu>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
